--- a/backend/public/customer/css/base.css
+++ b/backend/public/customer/css/base.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 :root {
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
     --main-color: #02bbff;
+    --height-header: 70px;
 }
 
 * {
@@ -14,7 +15,7 @@
 }
 
 body {
-    font-family: 'Red Rose' !important;
+    font-family: 'Roboto', sans-serif;
     background-color: #f7f7f7;
 }
 
@@ -32,6 +33,10 @@ body {
     width: 100%;
 } */
 
+.layout__content {
+    margin-top: calc(var(--height-header) + 10px);
+}
+
 
 .footer {
     width: 100%;
@@ -42,14 +47,14 @@ body {
     background-color: var(--main-color);
     text-align: center;
     color: var(--white-color);
-    padding: 2.25rem;
+    padding: 1.05rem;
     font-size: 1.24vw;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 .row-footer-mangtrithuc a {
-    color: var(--white-color);
+    color: var(--white-color) !important;
 }
 
 .row-footer {
