--- a/backend/public/customer/css/productDetail.css
+++ b/backend/public/customer/css/productDetail.css
@@ -76,6 +76,7 @@ html {
 
 /* Box2 */
 .detail-box2 {}
+
 .detail-box2_content {
     position: sticky;
     top: 30px;
@@ -161,7 +162,7 @@ span.text-muted a {
     margin-top: 25px;
 }
 
-.btn-add__cart .add__cart  {
+.btn-add__cart .add__cart {
     display: inline-block;
     font-size: 13px;
     font-weight: 700;
@@ -401,4 +402,79 @@ span.text-muted a {
 
 .keep__reading:hover {
     text-decoration: underline;
+}
+
+
+/* image */
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.swiper-slide {
+    background-size: cover;
+    background-position: center;
+}
+
+.mySwiper2 {
+    height: 80%;
+    width: 100%;
+}
+
+.mySwiper {
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+    opacity: 1;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image__detail {
+    width: 340px !important;
+    height: 450px !important;
+}
+
+.image_thumbsSlider {
+    /* width: 70px !important; */
+    height: 130px !important;
+    transform: scale(0.9);
 }
