--- a/backend/public/customer/css/products-list.css
+++ b/backend/public/customer/css/products-list.css
@@ -60,6 +60,7 @@
 .shop__sidebar__price ul,
 .shop__sidebar__brand ul {
     height: 225px;
+    overflow: hidden;
 }
 
 ul,
@@ -187,4 +188,20 @@ ol {
 
 .product__pagination a:hover {
     border-color: #111111;
+}
+
+.m-show-more-action {
+    display: block;
+    text-align: center;
+    color: #F7941E;
+    font-weight: bold;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    user-select: none;
+    padding-right: 20px;
+}
+
+.height-auto {
+    height: auto !important;
 }
