--- a/backend/public/customer/css/header.css
+++ b/backend/public/customer/css/header.css
@@ -436,11 +436,22 @@ p {
 }
 
 .nav-item__li:hover .nav-item__li__a {
-    color: #ed1d24 !important;
+    color: #111111 !important;
+    font-weight: 600;
 }
 
 .nav-item__products {
-    width: 300px !important;
+    width: 700px !important;
+
+}
+
+.nav-item__products .nav-item__li {
+    width: 50%;
+}
+
+.nav-categories__li:hover .nav-item__products {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .header_input_search {
